--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color:  #f1aa70f3;;
+    background-color:  #2d3142;
     padding: 20px 40px;
     color: white;
     display: flex;
