--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,25 +1,34 @@
 .banner-container {
-    background: url('../images/banner.jpg') center center/cover no-repeat;
     width: 100%;
     height: 400px;
     box-shadow: inset 0 0 0 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #2d3142;
 }
 
+.banner-section {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
 
-.empty-div {
-
+.banner-image {
+    width: 35vw;
+    max-width: 45%;
+    height: auto;
 }
 
 .banner-words {
-
+    color: white;
     padding: 8px 16px;
+    font-family: 'Oxygen', sans-serif;
 }
 
 .banner-heading {
-    font-size: 40px;
+    font-size: 50px;
     font-weight: bold;
-    margin-bottom: 1em;
+
+    font-family: 'Viga', sans-serif;
 }
