--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -14,9 +14,11 @@
 .card-heading {
     font-size: 20px;
     font-weight: bold;
+    font-family: 'Oxygen', sans-serif;
 
 }
 
 .card-caption {
     text-align: center; 
+    font-family: 'Oxygen', sans-serif;
 }
