--- a/src/components/ExercisePopup.css
+++ b/src/components/ExercisePopup.css
@@ -1,9 +1,9 @@
 .popup-container {
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 20;
     align-items: center;
-    background-color: lightgray;
+    background-color: #bfc0c0;
     position: fixed;
     top: 0;
     left: 0;
