--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 20px;
-    max-width: 1000px;
+    padding: 50px 10%;
+    background-color:whitesmoke;
 }
 
 .section-heading {
     font-size: 40px;
+    font-family:'Viga', sans-serif;
 }
 
 .divider {
