Made more Responsive

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -5,7 +5,7 @@
     border: none;
     cursor: pointer;
     margin-top: 2em;
-    background-color: #ef835a;
+    background-color: #ef8354;
     padding-top: 10px;
     padding-bottom: 10px;
     font-family: 'Oxygen', sans-serif;
