--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer-container {
     background-color:  #2d3142;
     padding: 20px 40px;
-    color: white;
+    background-color: white;
     display: flex;
     justify-content: space-between;
 
@@ -27,3 +27,19 @@
     padding-left: 10px;
 }
 
+@media only screen and (max-width: 768px) {
+    .footer-container{
+        font-size: 11px;
+        padding: 4px 8px;
+        display: flex;
+        align-items: center;
+    }
+
+    .footer-heading{
+        display: flex;
+        width: 200px;
+        align-items: center;
+        padding-top: 10px;
+    };
+
+}
