--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
   
 .navbar {
-    background-color: whitesmoke;
+    background-color: #2d3142;
     height: 100px;
     padding: 0.5rem calc((100vh - 1000px) / 2);
     display: flex;
@@ -30,11 +30,15 @@
     display: flex;
     align-items: center;
     margin-left: 20px;
+    width: 300px;
+    height: 70px;
+    z-index: 99;
 }
 
 .navbar-logo img {
-    height: 10vh;
-    width: auto;
+    width:  280px;
+    height: 60px;
+    padding-left: 30px;
     /*Add padding here to shrink the img*/
 }
 
@@ -42,8 +46,8 @@
     height: 100px;
     width: auto;
     left: 30vw;
-
     position: absolute;
+    display: none;
 }
 
 .menu-icon {
@@ -58,6 +62,7 @@
     align-items: center;
     justify-content: end;
     margin: 0;
+    z-index: 0;
 
 }
 
@@ -72,7 +77,7 @@
 .nav-links {
     text-decoration: none;
     font-family: 'Oxygen', sans-serif;
-    color: black;
+    color: whitesmoke;
     cursor: pointer;
 }
 
@@ -83,21 +88,31 @@
 
 /*For Phone Screens*/
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 768px) {
     .menu-icon {
         display: block;
+    }
+
+    .navbar-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 80px;
+        max-width: 1500px;
     }
 
     .nav-menu {
        display: flex;
        flex-direction: column;
        align-items: center;
-       justify-content: space-around;
+       justify-content: center;
        width: 100%;
-       height: 90vh;
+       height: 100vh;
        left: -100%;
        position: absolute;
-       top: 80px;
+       top: 0px;
        opacity: 0;
        transition: all 0.5s ease;
        
@@ -112,12 +127,27 @@
         transition: all 0.5s ease;
         z-index: 999;
         width: 100%;
-        height: 90vh;
-        top: 80px;
+        height: 100vh;
+        top: 0px;
         left: 0;
         position: fixed; 
         background-color:  #ef8354;
         padding: 0;
+    }
+
+    .navbar-logo{
+        width: 70px;
+        height: 65px;
+        display: flex;
+        justify-content: flex-start;
+        cursor: pointer;
+    }
+
+    .navbar-logo img {
+        margin: 0;
+        padding: 0;
+        width: 60px;
+        height: 62px;
     }
 
     .nav-item {
