--- a/src/components/VideoTutorial.css
+++ b/src/components/VideoTutorial.css
@@ -10,24 +10,37 @@
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
     background-blend-mode: multiply;
-    background-color: #2d3142d3;
+    background-color: rgb(238, 238, 238);
 }
 
 
 .video-heading {
     font-size: 40px;
     font-family: 'Viga', sans-serif;
-    color: white;
+    color:#2d3142;
 }
 
 .video-divider {
     width: 50px;
     height: 4px;
     margin-bottom: 40px;
-    background-color: white;
+    background-color: #2d3142;
 
 }
 
 .video-content {
 
+}
+
+@media only screen and (max-width: 768px) {
+    .video-heading {
+        font-size: 30px;
+    }
+
+    .video-divider {
+        width: 40px;
+        height: 3px;
+    }
+
+    
 }
