--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -6,6 +6,11 @@
     padding: 30px 30px;
 }
 
+.card-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
 
 .card-image img {
     width: 200px;
@@ -15,10 +20,16 @@
     font-size: 20px;
     font-weight: bold;
     font-family: 'Oxygen', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center
 
 }
 
 .card-caption {
     text-align: center; 
     font-family: 'Oxygen', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center
 }
