--- a/src/components/ExercisePopup.css
+++ b/src/components/ExercisePopup.css
@@ -9,7 +9,6 @@
     left: 0;
     display: flex;
     flex-direction: column;
-    opacity: 0.97;
 }
 
 .minimize-button {
@@ -17,7 +16,24 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    padding: 20px 20px;
-    margin-bottom: 40px;
+    padding: 10px 20px;
+    padding-bottom: 0;;
 }
 
+.document-container{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.document-iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 80%;
+    height: 90%;
+    margin: auto;
+}
