--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -55,6 +55,7 @@
     display: none;
     margin-right: 10px;
     cursor: pointer;
+    z-index: 99999;
 }
 
 .nav-menu {
@@ -85,6 +86,12 @@
     color: #ef8354;
 }
 
+/*For Ipads*/
+@media only screen and (max-width: 1024px) {
+    .nav-item{
+        margin: 10px;
+    }
+}
 
 /*For Phone Screens*/
 
@@ -122,11 +129,10 @@
         opacity: 0.95;
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: space-around;
         transition: all 0.5s ease;
         z-index: 999;
-        width: 100%;
+        width: 100vw;
         height: 100vh;
         top: 0px;
         left: 0;
