--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -14,8 +14,8 @@
 
 .divider {
     width: 50px;
-    height: 4px;
-    background-color: black;
+    height: 2px;
+    background-color: white !important;
 }
 
 .section-columns {
