--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -5,16 +5,14 @@
     width: 400px;
     float: left;
     z-index: 9;
-
 }
-
-
 
 
 .sidebar-toggle {
     cursor: pointer;
     width: 100px;
     height: 70px;
+
     background-color: #FFDF66;
     /*background-color: #e1c65a;*/
     display: flex;
@@ -42,7 +40,7 @@
 .sidebar-nav {
     cursor: pointer;
     width: 100%;
-    height: 65vh;
+    height: calc(100vh - 150px - 70px);
     transform: translateX(-100%);
     background-color: #FFDF66;
     display: flex;
@@ -58,7 +56,7 @@
 .sidebar-nav-active {
     cursor: pointer;
     width: 100%;
-    height: 65vh;
+    height: calc(100vh - 150px - 70px);
     display: flex;
     flex-direction: column;
     background-color: #FFDF66;
@@ -111,11 +109,11 @@
   }
 
   .sidebar-nav {
-    height: 400px;
+    height: calc(100vh - 100px - 18vh);
   }
 
   .sidebar-nav-active {
-    height: 100%;
+    height: calc(100vh - 100px - 18vh);
   }
 
 }
