--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,10 +2,11 @@
     position: fixed;
     top: 150px;
     display: inline-block;
-    width: 400px;
     float: left;
     z-index: 9;
+    width: 400px;
 }
+
 
 
 .sidebar-toggle {
@@ -97,12 +98,23 @@
       position: fixed;
       top: 20vh;
       display: inline-block;
-      width: 100%;
       height: 70vh;
       float: left;
       z-index: 9;
-  
+      width: 100%;
+      transition: z-index 1.0s linear;
   }
+
+  .sidebar-container-active {
+    position: fixed;
+    top: 20vh;
+    display: inline-block;
+    height: 70vh;
+    float: left;
+    z-index: 11;
+    width: 100%;
+    transition: z-index 0.1s linear;
+}
 
     .sidebar-toggle {
       width: 70px;     
@@ -114,6 +126,7 @@
 
   .sidebar-nav-active {
     height: calc(100vh - 100px - 18vh);
+    z-index: 11;
   }
 
 }
