Made Youtube Responsive

--- a/src/components/VideoTutorial.css
+++ b/src/components/VideoTutorial.css
@@ -29,7 +29,8 @@
 }
 
 .video-content {
-    max-width: 80vw;
+    max-width: 90vw;
+    display: flex;
 }
 
 @media only screen and (max-width: 768px) {
